# panobbgo

./: .gitignore  .travis.yml  AGENTS.md  CLAUDE.md  DEVELOPMENT_PROMPT.md  LOGGING_IMPROVEMENT_PLAN.md  PANOBBGO_GUIDE.md  README.md  TODO.md  analyzers.html  classic.html  codestyle.sh  config.html  config.yaml  core.html  coverage.xml  debug_imports.py  doc.sh  fabfile.py  genindex.html  guide.html  guide_architecture.html  guide_extending.html  guide_introduction.html  guide_mathematical_foundation.html  guide_research.html  guide_setup.html  guide_usage.html  heuristics.html  index.html  lib.html  logging_demo.py  objects.inv  panobbgo.sublime-project  py-modindex.html  pyproject.toml  requirements.txt  run_benchmark.py  run_ci.py  search.html  (+8 more)
.claude/: settings.json
.github/workflows/: README.md  ci.yml  docs.yml  setup.yml  tests.yml
_autosummary/: panobbgo.analyzers.best.Best.html  panobbgo.analyzers.convergence.Convergence.html  panobbgo.analyzers.grid.Grid.html  panobbgo.analyzers.splitter.Splitter.html  panobbgo.core.Analyzer.html  panobbgo.core.Event.html  panobbgo.core.EventBus.html  panobbgo.core.Heuristic.html  panobbgo.core.HeuristicSubprocess.html  panobbgo.core.Module.html  panobbgo.core.StrategyBase.html  panobbgo.heuristics.center.Center.html  panobbgo.heuristics.nearby.Nearby.html  panobbgo.heuristics.nelder_mead.NelderMead.html  panobbgo.heuristics.random.Random.html  panobbgo.lib.classic.Branin.html  panobbgo.lib.classic.Rastrigin.html  panobbgo.lib.classic.Rosenbrock.html  panobbgo.lib.lib.BoundingBox.html  panobbgo.lib.lib.Point.html  panobbgo.lib.lib.Problem.html  panobbgo.lib.lib.Result.html  panobbgo.strategies.rewarding.StrategyRewarding.html  panobbgo.strategies.round_robin.StrategyRoundRobin.html  panobbgo.strategies.ucb.StrategyUCB.html
_modules/: index.html
_modules/panobbgo/: config.html  core.html  ui.html  utils.html
_modules/panobbgo/analyzers/: best.html  grid.html  (+3 more)
_sources/: classic.rst.txt  guide.rst.txt  guide_architecture.rst.txt  guide_extending.rst.txt  guide_research.rst.txt  guide_setup.rst.txt  guide_usage.rst.txt  index.rst.txt  lib.rst.txt  strategies.rst.txt  utils.rst.txt
_sources/_autosummary/: panobbgo.analyzers.best.Best.rst.txt  panobbgo.core.EventBus.rst.txt  panobbgo.core.HeuristicSubprocess.rst.txt  panobbgo.heuristics.nearby.Nearby.rst.txt  panobbgo.heuristics.nelder_mead.NelderMead.rst.txt  panobbgo.lib.lib.BoundingBox.rst.txt  panobbgo.lib.lib.Problem.rst.txt  panobbgo.lib.lib.Result.rst.txt
_static/: classic.css  documentation_options.js  opensearch.xml  pygments.css
benchmarks/: __init__.py  bench_results_add.py  problems.py  strategies.py  test_benchmarks.py
doc/: Makefile  benchmark-functions-todo.md
doc/source/: analyzers.rst  classic.rst  conf.py  config.rst  core.rst  doc.rst  examples.rst  guide.rst  guide_architecture.rst  guide_extending.rst  guide_introduction.rst  guide_mathematical_foundation.rst  guide_research.rst  guide_setup.rst  guide_usage.rst  heuristics.rst  index.rst  lib.rst  library.rst  panobbgo.rst  strategies.rst  ui.rst  utils.rst
doc/survey-benchmark-funcs-global-opt/: Jamil_paper_v2.tex  part1_v2.tex  part2_v2.tex  part3_ref_v2.tex
html/: analyzers.html  classic.html  config.html  core.html  genindex.html  heuristics.html  index.html  lib.html  objects.inv  py-modindex.html  search.html  searchindex.js  strategies.html  ui.html  utils.html
html/_images/: inheritance-28d2cb2f106346371abd2ad282b3e4a4d486d0c3.png.map  inheritance-a693c454d140dc4ed1bc4e335db5b78c036c6965.png.map  inheritance-ef15ad7aaefc8d071929d415bf8fc6a938c8e2cf.png.map
html/_modules/: index.html
html/_sources/: classic.txt  config.txt  core.txt  index.txt
html/_static/: default.css  opensearch.xml
panobbgo/: __init__.py  analyzers.py  analyzers_test.py  benchmark.py  config.py  controller.py  core.py  heuristics.py  heuristics_test.py  problem.py  problem_lib.py  problems.py  statistics.py  storage.py  strategies.py  ui.py  utils.py  utils_test.py
panobbgo/analyzers/: __init__.py  analyzers_test.py  best.py  convergence.py  dedensifyer.py  grid.py  splitter.py
panobbgo/heuristics/: __init__.py  center.py  constraint_gradient.py  extremal.py  feasible_search.py  gaussian_process.py  heuristics_test.py  latin_hypercube.py  lbfgsb.py  local_penalty_search.py  nearby.py  nelder_mead.py  quadratic_wls.py  random.py  subprocess.py  weighted_average.py  zero.py
panobbgo/lib/: __init__.py  classic.py  constraints.py  lib.py
panobbgo/logging/: __init__.py  logger.py  progress.py
panobbgo/strategies/: __init__.py  rewarding.py  round_robin.py  strategies_test.py  thompson.py  ucb.py
panobbgo_lib/: __init__.py  classic.py  lib.py  test.py  test_lib.py
panobbgo_problems/: __init__.py  classic.py  lib.py
sketchpad/: fcluster.py  fit1.py  populfit.py  rmatrix.py  test01.py  testip.py
test/: testip.py
tests/: test_analyzers.py  test_analyzers_best_coverage.py  test_analyzers_comprehensive.py  test_benchmark.py  test_config_constraint_handler.py  test_config_init.py  test_constraint_robustness.py  test_constraints.py  test_constraints_alm.py  test_constraints_alm_gradient_integration.py  test_constraints_alm_integration.py  test_constraints_alm_robustness.py  test_constraints_augmented_lagrangian.py  test_constraints_convergence.py  test_constraints_epsilon.py  test_constraints_epsilon_integration.py  test_constraints_full.py  test_constraints_integration_comprehensive.py  test_constraints_realistic.py  test_convergence.py  test_dedensifyer.py  test_heuristic_feasible.py  test_heuristics.py  test_heuristics_constraint_gradient.py  test_heuristics_constraints.py  test_heuristics_constraints_gp.py  test_heuristics_lbfgsb_constraints.py  test_heuristics_local_penalty.py  test_integration.py  test_lib.py  test_logging.py  test_results_dataframe.py  test_stalling.py  test_storage.py  test_storage_integration.py  test_strategies.py  test_strategy_thompson.py  test_strategy_ucb.py  test_termination.py  test_utils.py  (+1 more)
tests/examples/: __init__.py  test_rosenbrock.py  test_rosenbrock_constrained.py
(+72 files in other folders)
