[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panobbgo"
version = "0.0.1"
description = "Parallel Noisy Black-Box Global Optimization"
readme = "README.md"
authors = [
  { name = "Harald Schilly", email = "harald.schilly@univie.ac.at" },
]
license = { text = "Apache 2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
keywords = ["optimization", "blackbox", "stochastic", "noisy", "parallel", "distributed", "cluster"]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "statsmodels",
    "ipython",
    "future",
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "http://github.com/haraldschilly/panobbgo"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "black",
    "mypy",
    "pyright",
    "types-setuptools",
    "pandas-stubs",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["panobbgo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["panobbgo"]
exclude = ["**/__pycache__", ".venv", "build", "dist"]
pythonVersion = "3.8"
pythonPlatform = "Linux"
typeCheckingMode = "basic"  # Can be "off", "basic", or "strict"
reportMissingImports = "warning"  # Warn instead of error for missing imports
reportMissingTypeStubs = false
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportGeneralTypeIssues = "warning"  # Warn instead of error for general type issues
reportAttributeAccessIssue = "warning"  # Warn instead of error for attribute access
reportCallIssue = "warning"  # Warn for missing arguments
reportArgumentType = "warning"  # Warn for argument type mismatches
