[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panobbgo"
version = "0.0.1"
description = "Parallel Noisy Black-Box Global Optimization"
readme = "README.md"
authors = [
  { name = "Harald Schilly", email = "harald.schilly@gmail.com" },
]
license = { text = "Apache 2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
keywords = ["optimization", "blackbox", "stochastic", "noisy", "parallel", "distributed", "cluster"]
dependencies = [
    "numpy>=2.4.1",
    "scipy>=1.17",
    "matplotlib>=3.10",
    "pandas>=2.3",
    "scikit-learn>=1.8",
    "statsmodels>=0.14.6",
    "dask[distributed]>=2026.1.1",
    "pyyaml>=6.0.3",
    "future",
    "rich>=14.2.0",
]
requires-python = ">=3.11"

[project.urls]
"Homepage" = "http://github.com/haraldschilly/panobbgo"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "flake8>=7.3",
    "black>=26.0",
    "ruff>=0.14.13",
    "mypy>=1.19",
    "pyright>=1.1.408",
    "types-setuptools",
    "pandas-stubs",
    "sphinx>=7.0",
    "shibuya",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["panobbgo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["panobbgo"]
exclude = ["**/__pycache__", ".venv", "build", "dist"]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "basic"  # Can be "off", "basic", or "strict"
reportMissingImports = "warning"  # Warn instead of error for missing imports
reportMissingTypeStubs = false
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportGeneralTypeIssues = "warning"  # Warn instead of error for general type issues
reportAttributeAccessIssue = "warning"  # Warn instead of error for attribute access
reportCallIssue = "warning"  # Warn for missing arguments
reportArgumentType = "warning"  # Warn for argument type mismatches
reportPrivateImportUsage = "warning"  # Warn for imports from private modules like IPython internals

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "shibuya>=2026.1.9",
    "sphinx>=8.1.3",
]
